Added Fabric of Reality Item and Improved Rifts